--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "rm -rf node_module/.cache && next build && next export && touch out/.nojekyll && git add out/ git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.0",
     "hamburger-react": "^2.5.0",
     "next": "12.2.5",
+    "notion-client": "^6.13.8",
+    "notion-compat": "^6.13.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-notion-x": "^6.13.9",
     "react-tsparticles": "^2.2.4",
     "tsparticles": "^2.2.4"
   },
