--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "jscreation",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/purplelow/jscreation",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "rm -rf node_module/.cache && next build && next export && touch out/.nojekyll && git add out/ git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "rm -rf node_module/.cache && next build && next export && touch out/.nojekyll && git add -f out/ && git checkout -b temp-for-deploy-gh-pages && git commit -m\"Deploy Next.js to gh-pages\" && git subtree split --prefix out -b gh-pages && git push -f origin gh-pages:gh-pages && git branch -D gh-pages && git checkout main && git branch -D temp-for-deploy-gh-pages"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.0",
