Feat:로딩 animatioin 수정, mobile nav 및 로딩 Recoil 관리 추가

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-notion-x": "^6.13.9",
     "react-tsparticles": "^2.2.4",
+    "recoil": "^0.7.5",
     "tsparticles": "^2.2.4"
   },
   "devDependencies": {
