--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.0",
+    "gsap": "^3.11.1",
     "hamburger-react": "^2.5.0",
     "next": "12.2.5",
     "notion-client": "^6.13.8",
