--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "notion-client": "^6.13.8",
     "notion-compat": "^6.13.8",
     "react": "18.2.0",
+    "react-animated-cursor": "^2.5.1",
     "react-dom": "18.2.0",
     "react-notion-x": "^6.13.9",
     "react-tsparticles": "^2.2.4",
