--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm install  # 또는 필요한 패키지 관리 도구 사용
+        run: yarn  # 또는 필요한 패키지 관리 도구 사용
 
       - name: Build
-        run: npm run build  # 또는 프로젝트를 빌드하는 다른 명령어
+        run: yarn build  # 또는 프로젝트를 빌드하는 다른 명령어
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
