--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.MY_PAGES_DEPLOY_TOKEN }}
           publish_dir: ./build  # 빌드된 파일이 있는 디렉토리
